# recipe-app-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: README.md
app/app/: settings.py  tests.py
